# fastmail

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backends/: base.py  registry.py  ses.py  unisender_go.py
base/: message.py
