[tool.poetry]
name = "fastmail"
version = "0.1.0"
description = ""
authors = ["Alexey Suponin <lexxsmith@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.2.0"
boto3 = "^1.38.10"
botocore = "^1.38.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | static
  | media
)/
'''

[tool.mypy]
python_version = 3.10
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
namespace_packages = true
follow_imports = "silent"
strict_optional = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "LOCALFOLDER", "FIRSTPARTY"]

[tool.flake8]
max-line-length = 100
max-complexity = 10
